--- a/css/style-new.css
+++ b/css/style-new.css
@@ -35,27 +35,72 @@ body {
     color: var(--body-text-purple);
     /* background-color: var(--light-purple); */
 }
-
+.navbar-brand img {
+    width: 240px;
+}
+.p-relative{
+    position: relative;
+}
 /* ---------Hero-banner-Css-Start------------------ */
 /* hero banner wraper */
-.banner_section_compass {
-    padding-top: 180px;
+#section-compass {
     position: relative;
+    overflow: hidden;
     background: #FEDC02;
     /* background-image: url(../assets/compass.png); */
 }
 
-.banner_section_compass .banner_shape1 {
+#section-compass .banner_shape1 {
     position: absolute;
-    top: 200px;
-    left: 15%;
-    animation: circlemove 10s infinite;
+    top: 0;
+    animation: animateHeart 2.4s infinite;
+}
+#section-compass .owl-carousel .owl-stage-outer {
+    position: relative;
+    overflow:visible;
+    -webkit-transform: translate3d(0,0,0);
+}
+#section-compass .owl-carousel .owl-item img{
+    max-width: none;
+    width: auto;
 }
 
 
 @keyframes circlemove {
     50% {transform: rotate(10deg);}
   }
+@keyframes scaling {
+    0% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
+    100% {
+        transform: scale(2.0);
+        -webkit-transform: scale(2.0);
+    }
+}
+
+@keyframes animateHeart {
+    0% {
+      transform: rotate(45deg) scale(0.8);
+    }
+    5% {
+      transform: rotate(45deg) scale(0.9);
+    }
+    10% {
+      transform: rotate(45deg) scale(0.8);
+    }
+    15% {
+      transform: rotate(45deg) scale(1);
+    }
+    50% {
+      transform: rotate(45deg) scale(0.8);
+    }
+    100% {
+      transform: rotate(45deg) scale(0.8);
+    }
+}
+
 
 .turning-animation {
     /* position: absolute;
@@ -87,11 +132,19 @@ body {
     position: inherit;
 }
 .card-img-wrapper .activity-title{
+    transition: all 0.3s ease-out 0s;
     position: absolute;
     left: 2rem;
-    bottom: 2rem;
+    top: 21rem;
     color:white;
 }
+@media(hover: hover) and (pointer: fine) {
+    .card-img-wrapper:hover .activity-title,
+    .card-img-wrapper:active .activity-title{
+        top: 10rem;
+    }
+}
+
 #section-activity .card{
     background-color: #F0FAE9;
 }
@@ -105,7 +158,7 @@ body {
 #section-promo .promo-text-yellow{
     position:absolute;
     z-index: 1;
-    top: 5%;
+    /* top: 5%; */
 }
 #section-promo .promo-woman{
     position:absolute;
@@ -116,7 +169,7 @@ body {
 #section-promo .promo-text-blue{
     position:absolute;
     z-index: 3;
-    bottom: 5%;
+    bottom: 0;
 }
 #section-company {
     margin-top: 5rem;
@@ -145,6 +198,7 @@ body {
     /* position: absolute;
     right: 20px; */
     color: #839BC0;
+    font-size: 2rem;
 }
 #section-bpoint .card{
     opacity: 0.9;
