--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1,8 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Golos+Text:wght@700&display=swap');
 :root {
     --green: #1BB471;
+    --hd-green: #018447;
     --yellow: #FFE500;
     --red: #FD2260;
     --blue: #3B1EEA;
@@ -20,7 +21,15 @@
     --slider-dots-color: #D4D2DD;
     --light-bg: #DFDAF3;
 }
-
+.red{
+    color: var(--red)
+}
+.hd-green{
+    color: var(--hd-green)
+}
+.yellow{
+    color: var(--yellow);
+}
 /* ------Common-Css------------- */
 
 html{scroll-behavior:smooth}
@@ -55,15 +64,36 @@ body {
     top: 0;
     animation: animateHeart 2.4s infinite;
 }
-#section-compass .owl-carousel .owl-stage-outer {
+.banner_text {
+    margin-top: 12rem;
+    width: 24rem;
+    margin-right: 11rem;
+}
+
+.h1, .h2, .h3, h4{
+    font-family: 'Golos Text', sans-serif;
+}
+/* #section-compass .owl-carousel .owl-stage-outer {
     position: relative;
     overflow:visible;
     -webkit-transform: translate3d(0,0,0);
-}
-#section-compass .owl-carousel .owl-item img{
+} */
+/* #section-compass .owl-carousel .owl-item img{
     max-width: none;
     width: auto;
+} */
+/* #section-compass  .owl-carousel {
+	position: relative;
+	height: 100%;
 }
+#section-compass .owl-carousel .owl-stage {
+    display: flex;
+  }
+
+#section-compass .owl-carousel .owl-item img {
+    width: auto;
+    height: 100%;
+  } */
 
 
 @keyframes circlemove {
@@ -115,9 +145,9 @@ body {
   }
 
 #section-benefit{
-    margin-top: 40px;
-    padding: 100px 0;
+    margin: 50px 0;
 }
+
 
 #section-benefit .card{
     background-color: #F0FAE9;
@@ -127,6 +157,9 @@ body {
     background-color: #FEDC02;
 }
 
+#section-activity{
+    margin: 50px 0;
+}
 #section-activity .card-img-wrapper{
     overflow: hidden;
     position: inherit;
@@ -179,6 +212,11 @@ body {
     padding: 5rem 0;
     /* height:600px;  */
     background-color: #F0FAE9;
+    background-image: linear-gradient(#F0FAE9, #fff);
+}
+.bpoint-title{
+    width: 40rem;
+    margin-bottom: 10px;
 }
 .bpoint-left{
     background-image: url(../assets/arrow_green.png);
@@ -213,20 +251,46 @@ body {
     border:0;
     /* border-top: 1px solid #dee2e6; */
 }
+
 #section-detail {
     margin-top: 5rem;
     padding: 5rem 0;
 }
-#section-detail .card{
-    /* opacity: 0.5; */
-    border: 0px;
+.card_1{
+    background-image: url(../assets/bg_01.png);
+    background-repeat: no-repeat;
+    background-position: left top;
 }
+.card_2{
+    background-image: url(../assets/bg_02.png);
+    background-repeat: no-repeat;
+    background-position: left top;
+}
+.card_3{
+    background-image: url(../assets/bg_03.png);
+    background-repeat: no-repeat;
+    background-position: left top;
+}
+.card_4{
+    background-image: url(../assets/bg_04.png);
+    background-repeat: no-repeat;
+    background-position: left top;
+}
+#section-detail .card{
+    border: 0px;
+    background-color: transparent;
+}
+#section-detail .card-header{
+    background-color: transparent;
+}
+
 #section-detail .card-body{
-    opacity: 0.5;
+
 }
 #section-detail .card-footer{
-    opacity: 0.5;
+    background-color: transparent;
 }
+
 .footer-bottom{
     background-color: var(--yellow);;
 }
@@ -236,6 +300,21 @@ body {
     background-position: center;
     margin-bottom: -100px;
 }
+/* .footer-top:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+    background-image: url(../assets/footer_cloud.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: -100px;
+    z-index: -1;
+  } */
 .footer-middle{
     background-image: url(../assets/footer_arc.png);
     background-repeat: no-repeat;
